--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-    <title>portfolio</title>
+    <title>Marcos Ramirez | Web Developer</title>
+    <link rel="icon"
+          type="image"
+          href="/build/favicon.ico">
   </head>
   <body>
     <div id="app"></div>
